--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -46,7 +46,7 @@
     <div fxFlex="100" fxLayout="column" fxLayoutAlign="start">
       <h1>
         <mat-icon>gesture</mat-icon>
-        Prescripciones
+        Recetas
       </h1>
       <div class="prescriptions-container mat-elevation-z8">
         <mat-table #table [dataSource]="dataSource">
