--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -176,3 +176,6 @@
     </mat-card-content>
   </mat-card>
 </div>
+<div class="container">
+  <app-professional-list></app-professional-list>
+</div>
