--- a/src/app/pharmacists/components/dialog/dialog.component.html
+++ b/src/app/pharmacists/components/dialog/dialog.component.html
@@ -13,7 +13,7 @@
   <div *ngSwitchCase="'dispensed'">
     <h3 mat-dialog-title><mat-icon>check</mat-icon>  Dispensada</h3>
     <div mat-dialog-content>
-      <p>La receta de {{data.prescription.patient.first_name}} se ha dispensado correctamente!</p>
+      <p>La receta de {{data.text}} se ha dispensado correctamente!</p>
     </div>
     <div mat-dialog-actions align="end">
       <button mat-button *ngIf="data.prescription" (click)=printPrescription(data.prescription)>Imprimir</button>
