--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -1,7 +1,6 @@
 .container
-  width: 60%
-  max-width: 800px
-  margin: 30px auto 0px
+  width: 85%
+  margin: 20px auto 0px
 
 .mat-form-field, button
   margin: 10px 0
@@ -36,3 +35,43 @@
     opacity: 1
 
 
+.new-prescription
+  width: 50%
+
+.prescriptions
+  width: 50%
+
+.prescriptions-container
+  display: flex
+  flex-direction: column
+  max-height: 500px
+  min-width: 300px
+
+
+.mat-table
+  overflow: auto
+  max-height: 500px
+
+
+.element-row
+  position: relative
+
+
+.element-row:not(.expanded)
+  cursor: pointer
+
+
+.element-row:not(.expanded):hover
+  background: #f5f5f5
+
+
+.element-row.expanded
+  border-bottom-color: transparent
+
+.cdk-column-expandedDetail
+  border-left-style: solid
+  border-color:#c9c9ca
+  border-width: 1px
+  margin-left: 24px
+  outline: 1px
+  outline-offset: -2px
