adds hint of value length in dni filed

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -49,6 +49,8 @@
                 </mat-option>
               </mat-autocomplete>
 
+              <mat-hint align="end">{{dni.value.length}} / 8</mat-hint>
+
               <mat-error *ngIf="patientDni.errors?.required">
                 Debe ingresar el dni del paciente
               </mat-error>
