adds 'back' button on reset password form

--- a/src/app/auth/components/reset-password/reset-password.component.html
+++ b/src/app/auth/components/reset-password/reset-password.component.html
@@ -32,12 +32,20 @@
       </mat-error>
     </mat-form-field>
 
-    <button mat-raised-button color="primary" type="submit">
-      <span *ngIf="!isLoading"> Cambiar contraseña </span>
-      <div *ngIf="isLoading" class="spinner-container" fxLayout="column" fxLayoutAlign="center center">
-        <mat-spinner [diameter]="30"  [color]="spinnerColor"></mat-spinner>
+    <div fxLayout="row" fxLayoutAlign="center">
+      <div fxLayout="row" fxLayoutGap="10px" fxFlex="100%" *ngIf="!showSubmit">
+        <button mat-raised-button fxFlex="50%" type="button" (click)="backClicked()">Volver</button>
+
+        <button mat-raised-button color="primary" type="submit" fxFlex="50%">
+          Cambiar contraseña
+        </button>
       </div>
 
-    </button>
+      <mat-spinner [color]="spinnerColor" [diameter]="spinnerDiameter" *ngIf="showSubmit"></mat-spinner>
+    </div>
+
+
+
+
   </div>
 </form>
