feat: add links of interest to login

--- a/src/app/auth/components/login/login.component.sass
+++ b/src/app/auth/components/login/login.component.sass
@@ -7,3 +7,21 @@
         padding: 10px
         width: 60%
         min-width: 400px
+
+.icon-login
+    width: 100px
+    height: 100px
+
+@font-face
+  font-family: roboto
+  src: url(assets/fonts/RobotoCondensed-Regular.ttf) format("opentype")
+
+.title-login
+  color: white
+  font-family: roboto
+
+.center
+  text-align: center
+
+.logo
+    margin-top: 4em
