--- a/src/app/professionals/components/professional-list/professional-list.component.sass
+++ b/src/app/professionals/components/professional-list/professional-list.component.sass
@@ -1,5 +1,5 @@
 .container
-  width: 85%
+  width: 100%
   margin: 20px auto 0px
 
 .new-prescription
@@ -20,8 +20,8 @@
 .prescriptions-container
   display: flex
   flex-direction: column
-  max-height: 500px
-  min-width: 300px
+  max-height: 50em
+  min-width: 500px
 
 
 .mat-table
