implement onchages professional-lits

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -177,5 +177,6 @@
       </mat-card-content>
     </div>
   </mat-card>
-  <app-professional-list></app-professional-list>
+
+  <app-professional-list [myPrescriptions]="myPrescriptions"></app-professional-list>
 </div>
