feat: add information in a dialog to login

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -22,6 +22,9 @@
         <a mat-raised-button href="https://drive.google.com/open?id=1GBPS_RdHIS8Kx3VWNpW6ZkMwdyFRPfDs" target="_blank">
           <mat-icon>remove_red_eye</mat-icon> Ver disposición
         </a>
+        <a mat-raised-button (click)="showInformation()" target="_blank">
+          <mat-icon>info</mat-icon> Leer importante
+        </a>
       </mat-card-actions>
     </mat-card>
   </div>
