--- a/src/app/auth/components/dialog/dialog.component.html
+++ b/src/app/auth/components/dialog/dialog.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   <h3>Estimadxs profesionales de la Medicina y de la Farmacia:</h3>
   <p>
-    Aquellxs que están habilitadxs para ejercer su profesión en la provincia de Neuquén deben registrarse en esta plataforma para prescribir (en el caso de lxs médicxs) y dispensar (en el caso de lxs farmacéuticos) los medicamentos que integran las listas de psicotrópicos o sustancias riesgosas y de venta exclusiva bajo receta archivada (duplicados). Los registros en esta plataforma son documentos de valor legal que se ajustan a las leyes vigentes y al marco normativo dispuesto para la actual emergencia sanitaria
+    Aquellos que están habilitados para ejercer su profesión en la provincia de Neuquén deben registrarse en esta plataforma para prescribir (en el caso de los médicos) y dispensar (en el caso de los farmacéuticos) los medicamentos que integran las listas de psicotrópicos o sustancias riesgosas y de venta exclusiva bajo receta archivada (duplicados). Los registros en esta plataforma son documentos de valor legal que se ajustan a las leyes vigentes y al marco normativo dispuesto para la actual emergencia sanitaria
   </p>
   <h3>Tener presente que:</h3>
   <p>
