adds and configures _variables sass file

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'styles/_variables'
+
+@font-face
+  src: url(assets/fonts/RobotoCondensed-Regular.ttf) format("opentype")
 body
   margin: 0
   padding: 0
   background-color: #303030
+  font-family: roboto
+
+
+.wrapper
+    width: 80%
+    margin: auto
+    @media (min-width: $xx-larger-devices) and (max-width: $xxx-larger-devices)
+        min-width: calc(#{$xx-larger-devices} - 20px)
+        max-width: calc(#{$xxx-larger-devices} - 20px)
+    @media (min-width: $x-larger-devices) and (max-width: $xx-larger-devices)
+        width: 90%
+        min-width: calc($x-larger-devices - 20px)
+        max-width: calc($xx-larger-devices - 20px)
+    @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
+        min-width: calc(#{$larger-devices} - 20px)
+        max-width: calc(#{$x-larger-devices} - 20px)
+    @media (min-width: $medium-devices) and (max-width: $larger-devices)
+        min-width: calc(#{$medium-devices} - 20px)
+        max-width: calc(#{$larger-devices} - 20px)
+    @media (min-width: $small-devices) and (max-width: $medium-devices)
+        min-width: calc(#{$small-devices} - 20px)
+        max-width: calc(#{$medium-devices} - 20px)
+    @media (min-width: $x-small-devices) and (max-width: $small-devices)
+        width: calc( 100% - 10px)
+        min-width: calc(#{$x-small-devices} - 20px)
+        max-width: calc(#{$small-devices} - 20px)
+
+.text-center
+  text-align: center
+
