--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -85,10 +85,10 @@
           <h2 class="text-center">Primeros pasos</h2>
         </mat-card-title>
         <mat-card-content>
-          Lo primero que debe hacer es cambiar la contraseña con la que fue habilitado su usuario. Recuerde que la misma constituye una clave de validación signataria, es decir, que Ud debe proteger la seguridad de la misma y no compartirla con ninguna persona, ya que mediante su uso se valida el origen de la prescripción.
+          Le recomendamos cambiar la contraseña con la que fue habilitado su usuario. Recuerde que la misma constituye una clave de validación signataria, es decir, que Ud debe proteger la seguridad de la misma y no compartirla con ninguna persona, ya que mediante su uso se valida el origen de la prescripción.
           Ante cualquier duda, no dude en comunicarse con la mesa de soporte, enviando un correo electrónico a:
           <a href="mailto:recetarsalud@neuquen.gov.ar"> recetarsalud@neuquen.gov.ar </a> <br>
-          A continuación encontrará videos paso a paso de cómo interactuar con la aplicación.
+          A continuación encontrará videos explicativos de cómo interactuar con la aplicación.
         </mat-card-content>
         <mat-card-actions fxLayout="row" fxLayoutGap="10px">
             <a mat-raised-button href="https://youtu.be/2HdbJTn7kkM" target="_blank" fxFlex="50%" class="btn-link">
