fix: dialog title align

--- a/src/app/auth/components/dialog/dialog.component.html
+++ b/src/app/auth/components/dialog/dialog.component.html
@@ -1,4 +1,7 @@
-<h3 mat-dialog-title><mat-icon>info</mat-icon>  Leer importante</h3>
+<h3 mat-dialog-title fxLayout="row" fxLayoutAlign="start center">
+  <mat-icon>info</mat-icon>
+  <span>Leer importante</span>
+</h3>
 <div mat-dialog-content>
   <h3>Estimados profesionales de la Medicina y de la Farmacia:</h3>
   <p>
