--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.sass
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.sass
@@ -1,18 +1,62 @@
-.container
-  width: 85%
-  margin: 20px auto 0px
+@import 'styles/_variables'
 
-.mat-form-field, button
-  margin: 10px 0
+$panels-height: 294px
+$panels-height-xl: 325px
 
-.insurances
-  width: 26%
+:host
+    display: block
+    width: 100%
+    height: 100%
 
-.search-prescription
-  width: 18%
+.cards-container
+    margin-top: 20px
+    @media (min-width: $x-small-devices) and (max-width: $small-devices)
+        flex-direction: column!important
+        .search-panel
+            order: 1
+        .prescription-panel
+            order: 2
+        .insurance-panel
+            order: 3
 
-.hidden-print
-  visibility: hidden
+    .search-panel
+        width: 20%
+
+    .prescription-panel
+        width: 55%
+
+    .insurance-panel
+        width: 25%
+    
+    .search-panel, .prescription-panel, .insurance-panel
+        mat-card
+            box-sizing: content-box!important
+            height: calc(#{$panels-height} - 100  px)
+            @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
+                height: calc(#{$panels-height-xl} - 32px)
+
+            @media (min-width: $x-small-devices) and (max-width: $larger-devices)
+                height: auto
+            mat-card-title, mat-card-content
+                margin: 0!important
+
+            mat-card-actions
+                padding: 0!important
+                margin: 0!important
+                @media (min-width: $x-small-devices) and (max-width: $larger-devices)
+                    flex-direction: column!important
+                    a.btn-link
+                        max-width: 100%!important
+                        margin: 10px 0!important
+
+        @media (min-width: $medium-devices) and (max-width: $larger-devices)
+            width: 310px
+        @media (min-width: $small-devices) and (max-width: $medium-devices)
+            width: 310px
+        @media (min-width: $x-small-devices) and (max-width: $small-devices)
+            width: 480px
+            max-width: calc(100% - 10px)
+            margin: 10px auto!important
 
 
 .mat-table
@@ -42,3 +86,9 @@
   margin-left: 24px
   outline: 1px
   outline-offset: -2px
+
+.insurances-container
+  display: flex
+  flex-direction: column
+  max-height: 500px
+  min-width: 300px
