--- a/src/app/auth/components/login/login.component.sass
+++ b/src/app/auth/components/login/login.component.sass
@@ -73,3 +73,14 @@ $panels-height-xl: 325px
         font-family: roboto
 
 
+.logo-01
+    width: 170px
+    height: 50px
+
+.logo-02
+    width: 170px
+    height: 50px
+
+.logo-03
+    width: 100px
+    height: 50px
